# SocketProgram

./: Makefile.am  configure.ac
libs/: Makefile  Makefile.am  Makefile.in
libs/Ffmpeg/: Makefile  Makefile.am  Makefile.in  libFfmpeg.la  libFfmpeg_la-muxer.lo  muxer.cpp  muxer.h
libs/Ffmpeg/.deps/: libFfmpeg_a-muxer.Po  libFfmpeg_la-muxer.Plo
libs/Ffmpeg/.libs/: libFfmpeg.la  libFfmpeg.lai  libFfmpeg.so.0.0.0
libs/Inet/: Makefile  Makefile.am  Makefile.in  Socket.cpp  Socket.h  Socket.tpp
libs/Inet/.deps/: libinet_a-Socket.Po  libinet_la-Socket.Plo
libs/Protocols/: Makefile  Makefile.am  Makefile.in  Protocol.cpp  Protocol.h  ProtocolFtp.cpp  ProtocolFtp.h  ProtocolHttp.cpp  ProtocolHttp.h  ProtocolSimple.cpp  ProtocolSimple.h
libs/Protocols/.deps/: libprotocol_a-Protocol.Po  libprotocol_a-ProtocolHttp.Po  libprotocol_a-ProtocolSimple.Po  libprotocol_la-Protocol.Plo  libprotocol_la-ProtocolHttp.Plo  libprotocol_la-ProtocolSimple.Plo
src/: Elevator.cpp  Elevator.h  Makefile.am  Person.cpp  Person.h  ProtocolHttp.cpp  ProtocolSimple.h  Socket.tpp  client.cpp  ftpServer.cpp  main.cpp  muxServer.cpp  muxer.cpp  server.cpp  sserver.cpp  vimtest.cpp
