lib_LIBRARIES=libinet.a
lib_LTLIBRARIES=libinet.la

libSources =  \
	Socket.cpp \
	Socket.tpp \
	Socket.h 

libinet_a_SOURCES= \
					$(libSources)
libinet_a_CFLAGS= $(AM_CFLAGS)
libinet_a_CXXFLAGS= $(AM_CXXFLAGS)

libinet_la_SOURCES= \
					$(libSources)
libinet_la_CFLAGS= $(AM_CFLAGS)
libinet_la_CXXFLAGS= $(AM_CXXFLAGS)
